--- a/app/src/main/res/layout/activity_choose_players.xml
+++ b/app/src/main/res/layout/activity_choose_players.xml
@@ -34,6 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_media_play" />
+        android:src="@android:drawable/ic_media_ff"/>
 
 </android.support.design.widget.CoordinatorLayout>
