--- a/app/src/main/res/layout/activity_order_players.xml
+++ b/app/src/main/res/layout/activity_order_players.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/player_order_list_container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="se.d2collective.puttputtmatch.activities.OrderPlayersActivity">
+    android:fitsSystemWindows="true"
+    tools:context="se.d2collective.puttputtmatch.activities.ChoosePlayersActivity">
 
-    <com.woxthebox.draglistview.DragListView
-        android:id="@+id/player_order_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/start_game_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_media_play" />
+</android.support.design.widget.CoordinatorLayout>
