User can now update score for individual player

--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -9,13 +9,37 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="horizontal"
+
     tools:context="se.d2collective.puttputtmatch.activities.MatchActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/matchRecyclerView"
+        android:layout_weight="8"
         android:scrollbars="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="250dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:background="@drawable/shadeborder">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:text="Score total:"/>
+        <TextView
+            android:id="@+id/match_total_difference"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="60sp"
+            android:layout_gravity="center"
+            android:text="0"/>
+    </LinearLayout>
 
 
 </LinearLayout>
