--- a/app/src/main/res/layout/player_match_content.xml
+++ b/app/src/main/res/layout/player_match_content.xml
@@ -11,15 +11,8 @@
         android:layout_weight="2"
         android:background="@drawable/customborder">
 
-        <ImageView
-            android:id="@+id/substitute_player"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_swap_horiz"
-            android:layout_gravity="top|right" />
-
         <TextView
-            android:id="@+id/matchViewPlayerName"
+            android:id="@+id/match_view_player_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
@@ -27,32 +20,56 @@
             android:layout_weight="1"
             android:layout_gravity="center|top" />
 
-        <TextView
-            android:id="@+id/matchViewPlayerDifference"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_weight="3"
-            android:textSize="20dp"
-            android:layout_gravity="center|top" />
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="5"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:backgroundTint="@android:color/holo_green_dark"
-                android:src="@drawable/ic_action_add"/>
+            android:gravity="center_horizontal">
 
             <android.support.design.widget.FloatingActionButton
-                android:layout_marginTop="20dp"
+                android:id="@+id/fab_player_minus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 app:backgroundTint="@android:color/holo_red_dark"
                 android:src="@drawable/ic_action_minus"/>
+
+            <TextView
+                android:id="@+id/match_view_player_difference"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_weight="4"
+                android:layout_marginTop="5dp"
+                android:textSize="40dp"
+                android:gravity="center" />
+
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_player_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:backgroundTint="@android:color/holo_green_dark"
+                android:src="@drawable/ic_action_add"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/match_player_options"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_settings" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Options"
+                android:layout_gravity="center_vertical"/>
         </LinearLayout>
 
     </LinearLayout>
