--- a/app/src/main/res/layout/player_match_content.xml
+++ b/app/src/main/res/layout/player_match_content.xml
@@ -55,11 +55,11 @@
                 android:src="@drawable/ic_action_add"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/match_player_options"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/match_player_options"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_vertical"
