--- a/app/src/main/res/layout/player_match_content.xml
+++ b/app/src/main/res/layout/player_match_content.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/player_layout"
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="2"
         android:background="@drawable/customborder">
+
 
         <TextView
             android:id="@+id/match_view_player_name"
@@ -18,14 +20,20 @@
             android:textSize="20dp"
             android:text="Martin Svensson"
             android:layout_weight="1"
-            android:layout_gravity="center|top" />
+            android:layout_gravity="center|top"
+            android:layout_marginTop="39dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_weight="5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginTop="26dp"
+            android:layout_below="@+id/match_view_player_name"
+            android:layout_centerHorizontal="true">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_player_minus"
@@ -58,7 +66,11 @@
             android:id="@+id/match_player_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
@@ -71,6 +83,19 @@
                 android:text="Options"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
-
-    </LinearLayout>
-</LinearLayout>
+        <TextView
+            android:id="@+id/match_player_score"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"/>
+    </RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/overlay"
+        android:layout_width="250dp"
+        android:layout_alignParentBottom="true"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"
+        android:alpha="0.7"
+        android:visibility="invisible"></LinearLayout>
+</RelativeLayout>
